Fixed journal entry pages taller than window being cut off.

--- a/styles/_pdf.scss
+++ b/styles/_pdf.scss
@@ -1,6 +1,5 @@
 section.window-content {
   article.journal-entry-page {
-    height: 100%;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -17,3 +16,4 @@ section.window-content {
 .journal-entry-page.pdf.view {
   aspect-ratio: 1 / 1.3; // 1 to 1.3 ratio is about right for GURPS source books
 }
+
